--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,10 @@
 .app.dark {
   --bg-color: #2b2b2b;
+  --inverted-bg-color: #d3d3d3;
 
-  --primary-color: #00af1c;
-  --secondary-color: #b4b4b4;
+  --primary-color: #3afae4;
+  --secondary-color: #e296fa;
 
+  --inverted-primary-color: deepskyblue;
+  --inverted-secondary-color: #5b5b5b;
 }
