--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,10 @@
 .app.light  {
   --bg-color: #d3d3d3;
+  --inverted-bg-color: #2b2b2b;
 
-  --primary-color: #01360b;
+  --primary-color: deepskyblue;
   --secondary-color: #5b5b5b;
+
+  --inverted-primary-color: #3afae4;
+  --inverted-secondary-color: #e296fa;
 }
