--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,4 +1,5 @@
-.app.light {
+//.app.light {
+:root {
     --bg-color: #e1d6d6;
     --inverted-bg-color: #2b2b2b;
     --primary-color: deepskyblue;
