--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -6,4 +6,5 @@
     --secondary-color: #5b5b5b;
     --inverted-primary-color: #3afae4;
     --inverted-secondary-color: #e296fa;
+    --red-color: #f52828;
 }
