--- a/src/shared/assets/Button/Button.module.scss
+++ b/src/shared/assets/Button/Button.module.scss
@@ -31,6 +31,23 @@
 }
 
 .square {
-    width: 50px;
-    height: 50px;
+    padding: 0;
+}
+
+.square.size_m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+    font: var(--font-line-m)
+}
+
+.square.size_l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+    font: var(--font-line-l)
+}
+
+.square.size_xl {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+    font: var(--font-line-xl)
 }
