--- a/src/shared/assets/Button/Button.module.scss
+++ b/src/shared/assets/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .button {
     cursor: pointer;
     color: var(--primary-color);
+    padding: 10px 15px;
 }
 
 .clear {
@@ -12,7 +13,6 @@
 }
 
 .outline {
-    padding: 10px;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
     background: none;
@@ -37,17 +37,26 @@
 .square.size_m {
     width: var(--font-line-m);
     height: var(--font-line-m);
-    font: var(--font-line-m)
 }
 
 .square.size_l {
     width: var(--font-line-l);
     height: var(--font-line-l);
-    font: var(--font-line-l)
 }
 
 .square.size_xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
-    font: var(--font-line-xl)
+}
+
+.size_m {
+    font: var(--font-m);
+}
+
+.size_l {
+    font: var(--font-l);
+}
+
+.size_xl {
+    font: var(--font-xl);
 }
