--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,4 +1,5 @@
 :root {
+    // font-sizes
     --font-family-main: verdana, "Courier New", monospace;
     --font-size-m: 16px;
     --font-line-m: 24px;
@@ -9,7 +10,15 @@
     --font-size-xl: 32px;
     --font-line-xl: 40px;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
+
+    // px
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 120px;
+
+    // z-index
+    --modal-z-index: 10;
+
+    // colors
+    --overlay-color: rgba(0 0 0 / 60%);
 }
