--- a/src/shared/assets/Button/Button.module.scss
+++ b/src/shared/assets/Button/Button.module.scss
@@ -4,12 +4,16 @@
     padding: 10px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
     padding: 0;
     border: none;
     background: none;
-    color: var(--primary-color);
     outline: none;
+}
+
+.clearInverted {
+    color: var(--inverted-primary-color);
 }
 
 .outline {
